# TrustCompiler

./: .gitignore  CMakeLists.txt  Grammar.txt  Makefile  README.md  lexical_analyzer.cpp  lexical_analyzer.h  main.cpp  utils.h
CodeGenerator/: code_generator.cpp  code_generator.h
Docs/: LexicalAnalyzer.tex  document.tex  is_keyword.txt
LexicalAnalyzer/: lexical_analyzer.cpp  lexical_analyzer.h
Output/: 1.tr.c  1.tr.lex  1.tr.sem  1.tr.syn  1.tr.syntax  2.tr.c  2.tr.lex  2.tr.sem  2.tr.syn  3.TR.lex  3.TR.syn  3.tr.c  3.tr.sem  4.tr.c  4.tr.lex  4.tr.syn  5.tr.c  5.tr.lex  5.tr.sem  5.tr.syn  6.tr.c  6.tr.lex  6.tr.sem  6.tr.syn  7.tr.c  7.tr.lex  7.tr.sem  7.tr.syn  conditions.tr.c  conditions.tr.lex  conditions.tr.sem  conditions.tr.syn  expression.tr.c  expression.tr.lex  expression.tr.sem  expression.tr.syn  functions.tr.c  functions.tr.lex  functions.tr.sem  functions.tr.syn  (+13 more)
SemanticAnalyzer/: semantic_analyzer.cpp  semantic_analyzer.h
SyntaxAnalyzer/: Grammar.txt  Grammer.txt  VarsOpsGrammer.txt  syntax_analyzer  syntax_analyzer.cpp  syntax_analyzer.h
Test/: 1.tr  10.tr  11.tr  2.tr  3.tr  6.tr  8.tr  9.tr  Grammar.txt  conditions.tr  expression.tr  functions.tr  lexical_errors.tr  loops.tr  mixed.tr  print.tr  syntax_errors.tr  variables.tr
Tests/: 12.tr  13.tr  14.tr  2.tr  4.tr  5.tr  7.tr
